[package]
name = "tigershark2"
version = "0.1.0"
authors = ["Julien D. <ju.dep@zoho.com>"]
licence = "GNU GPLv3"
repository = "https://github.com/jdvfx/tigershark2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
mongodb = "2.2.2"
bson = "2.3.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
futures = "0.3.21"
tokio = { version = "1.19.2", features = ["full"]}

[[bin]]
path = "src/main.rs"
name = "tigershark2"
