[package]
name = "tigershark2"
version = "0.1.0"
authors = ["Julien D. <ju.dep@zoho.com>"]
licence = "GNU GPLv3"
repository = "https://github.com/jdvfx/tigershark2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
mongodb = "2.3.0"
bson = "2.4.0"
serde = { version = "1.0.142", features = ["derive"]}
serde_json = "1.0.83"
futures = "0.3.21"
tokio = { version = "1.20.1", features = ["full"]}

[[bin]]
path = "src/main.rs"
name = "tigershark2"
